# SCPI-Server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.flags  config.txt  vcpkg.json
doc/tool/: cmd.txt.txt  cmd.xml  readme.docx
src/CmdProtocol/: CMakeLists.txt
src/CommonUtility/: CMakeLists.txt  Loger.cpp  Loger.h  NetUtility.cpp  NetUtility.h
src/DomainModel/: CMakeLists.txt  CmdAction.cpp  CmdAction.h  CmdResult.h  DeviceBase.cpp  DeviceBase.h  DeviceCMW.cpp  DeviceCMW.h  DeviceFactory.cpp  DeviceFactory.h
src/Examples/: CMakeLists.txt
src/Examples/MsgPub/: main.cpp
src/Examples/MsgSub/: main.cpp
src/ScpiServer/: CMakeLists.txt  main.cpp
src/UnitTest/: CMakeLists.txt  TestModel.cpp  UT_CmdAction.cpp  UT_NetUtility.cpp
src/ZmqMessager/: CMakeLists.txt  DataPublisher.cpp  DataPublisher.h  DataSubscriber.cpp  DataSubscriber.h
